--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
   </head>
 
   <body>
-    <table>
-      <thead>
-        <th>Municipality</th>
-        <th>Population</th>
-      </thead>
-      <tbody id="table-body"></tbody>
-    </table>
+    <div class="center">
+      <h1>Municipality employment statistics in Finland</h1>
+      <table>
+        <thead>
+          <th>Municipality</th>
+          <th>Population</th>
+        </thead>
+        <tbody id="table-body"></tbody>
+      </table>
+    </div>
   </body>
 </html>
