--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <thead>
           <th>Municipality</th>
           <th>Population</th>
+          <th>Employment amount</th>
+          <th>Employment-%</th>
         </thead>
         <tbody id="table-body"></tbody>
       </table>
